# devman-gen

./: README.md  design.md  pyproject.toml
src/devman_gen/: __init__.py  cli.py  generator.py  introspect.py  spec.py
src/devman_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/devman_gen/runtime/: __init__.py  client.py  db.py  server.py
tests/: test_generator.py  test_protocol.py
