[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devman-gen"
version = "0.2.0"
description = "Generate managed bridge client/server wrappers for hardware libraries"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "devman"}]
license = {text = "MIT"}
dependencies = []

[project.scripts]
devman-gen = "devman_gen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
